--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Acme Web Design | Welcome</title>
 
-  <!-- CUSTOME STYLESHEET-->
+  <!-- CUSTOM STYLESHEET-->
   <link rel="stylesheet" href="style.css">
 
 </head>
