Finshed the #newsletter section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
     <form action="#">
-      <input type="text" name="email" id="email" value="Enter your email...">
+      <input type="text" name="email" id="email" placeholder="Enter email...">
       <input type="submit" name="submit" id="subscribe-btn" value="Subscribe">
     </form>
   </section>
