Added in the span tags for the Acme in h2 and their respective li pages.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <!-- HEADER -->
   <header>
-    <h2>Acme Web Design</h2>
+    <h2><span>Acme</span> Web Design</h2>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="#"><span>Home</span></a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
     </ul>
