--- a/services.html
+++ b/services.html
@@ -13,11 +13,11 @@
 <body>
   <!-- HEADER -->
   <header>
-    <h2>Acme Web Design</h2>
+    <h2><span>Acme</span> Web Design</h2>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
+      <li><a href="#"><span>Services</span></a></li>
     </ul>
     <div></div>
   </header>
