--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
 <body>
   <!-- HEADER -->
   <header>
-    <h2>Acme Web Design</h2>
+    <h2><span>Acme</span> Web Design</h2>
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="#"><span>About</span></a></li>
       <li><a href="#">Services</a></li>
     </ul>
     <div></div>
