Fixed the header links

--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
   <header>
     <h2><span>Acme</span> Web Design</h2>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#"><span>About</span></a></li>
-      <li><a href="#">Services</a></li>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="about.html"><span>About</span></a></li>
+      <li><a href="services.html">Services</a></li>
     </ul>
     <div></div>
   </header>
