--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <title>Acme Web Design | Welcome</title>
 
   <!-- CUSTOM STYLESHEET-->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="home.css">
 
 </head>
 <body>
@@ -15,9 +15,9 @@
   <header>
     <h2><span>Acme</span> Web Design</h2>
     <ul>
-      <li><a href="#"><span>Home</span></a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
+      <li><a href="home.html"><span>Home</span></a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
     </ul>
     <div></div>
   </header>
