--- a/services.html
+++ b/services.html
@@ -15,9 +15,9 @@
   <header>
     <h2><span>Acme</span> Web Design</h2>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#"><span>Services</span></a></li>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html"><span>Services</span></a></li>
     </ul>
     <div></div>
   </header>
